# rlbench-multiview-diffusion-policy

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: eval_selected10_rgb_resnet18conv_dp.sh  smoke_dataset.sh  train_selected10_rgb_resnet18conv_dp_h1.sh
src/rlbench_multiview_dp/: __init__.py  common.py  data.py  diffusion.py  eval_online.py  inference.py  model.py  smoke_data.py  text.py  train.py
